# voxpilot

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
app/: __init__.py  main.py
app/controllers/: health_controller.py  speech_controller.py
app/core/: config.py  logging.py
app/routers/: health.py  speech.py
app/schemas/: health.py  speech.py
app/services/: health_service.py  speech_service.py
tests/: test_api.py  test_config.py  test_health_controller.py  test_health_service.py  test_logging.py  test_speech_controller.py  test_speech_service.py
