[project]
name = "voxpilot"
version = "0.1.0"
description = "Voice-controlled action pilot API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgi-correlation-id>=5.0.1",
    "fastapi>=0.115.0",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=app --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = true
